--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,3 +6,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.main__wrapper-outer {
+  background: url('./assets/img/main_bg.png') no-repeat 100% 100%;
+  width: 100%;
+  height: 100vh;
+  -webkit-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+  padding: 50px 80px;
+  box-sizing: border-box;
+  .main__wrapper-in {
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: white;
+    border-radius: 4px 0 0 4px;
+    box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);    
+  }
+}
