--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -6,4 +6,22 @@
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 4px 0 0 4px;
     box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);
+    .exitBtn {
+        margin-top: auto;
+        margin-bottom: 40px;
+    }
+    nav {
+        display: flex;
+        flex-wrap: wrap;
+        .links {
+            display: inline-block;
+            width: 100%;
+            color: #404447;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .activeLink {
+            color: #ff8600;
+        }
+    }
 }
