--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -1,14 +1,35 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 4px 0 0 4px;
     box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);
-    .exitBtn {
+    h1 {
+        font-weight: 900;
+        text-align: center;
+        margin: 10px 0 30px;
+    }
+    .exitBtn {        
+        display: inline-block;
+        width: 100%;
+        color: #404447;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 15px;
+        letter-spacing: 1.8px;
+        padding-left: 17px;
+        border-left: 2px solid transparent;
         margin-top: auto;
         margin-bottom: 40px;
+        &:hover {
+            color: #ff8600;
+        }
+        img {
+            margin-right: 1rem;
+            margin-top: 2px;
+        }
     }
     nav {
         display: flex;
@@ -19,9 +40,19 @@
             color: #404447;
             text-decoration: none;
             font-weight: 500;
+            font-size: 15px;
+            letter-spacing: 1.5px;
+            padding-left: 17px;
+            border-left: 2px solid transparent;
+            margin-bottom: 10px;
+            &:hover {
+                color: #ff8600;
+                border-left: 2px solid #ff8600;
+            }
         }
         .activeLink {
             color: #ff8600;
+            border-left: 2px solid #ff8600;
         }
     }
 }
