--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.3s linear;
 }
 
 body {
@@ -23,7 +24,7 @@ body {
   padding: 50px 80px;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 300px 1fr;
   .main__wrapper-in {
     width: 100%;
     height: 100%;
