--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900&display=swap&subset=cyrillic');
+
 
 * {
   margin: 0;
@@ -9,7 +10,7 @@
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -24,7 +25,7 @@ body {
   padding: 50px 80px;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 300px 1fr;  
   .main__wrapper-in {
     width: 100%;
     height: 100%;
@@ -32,4 +33,9 @@ body {
     border-radius: 0 4px 4px 0;
     box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);    
   }
+}
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
