todos page start

--- a/client/src/components/AuthPage/AuthPage.module.scss
+++ b/client/src/components/AuthPage/AuthPage.module.scss
@@ -44,6 +44,7 @@
     .authFormBtns {
         display: flex;
         justify-content: center;
+        margin-top: 10px;
         .btn {
             background: transparent;
             cursor: pointer;
@@ -51,6 +52,8 @@
             padding: 5px 10px;
             font-size: 20px;
             outline: none;
+            position: relative;
+            border-radius: 5px;
             &:not(:last-child) {
                 margin-right: 15px;
             }
