--- a/client/src/components/common/Loader/Loader.module.scss
+++ b/client/src/components/common/Loader/Loader.module.scss
@@ -1,21 +1,49 @@
-.loading {
-    height: 0;
-    width: 0;
-    padding: 15px;
-    border: 6px solid #ccc;
-    border-right-color: #888;
-    border-radius: 22px;
-    -webkit-animation: rotate 1s infinite linear;
-    /* left, top and position just for the demo! */
-    position: absolute;
-    left: 50%;
-    top: 50%;
+.loader{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    position: relative;
+    margin: 0 auto;
+    top: 40px;
+    left: -2.5px;
 }
 
-@-webkit-keyframes rotate {
-    /* 100% keyframe for  clockwise. 
-       use 0% instead for anticlockwise */
-    100% {
-        -webkit-transform: rotate(360deg);
+.loader span{
+    display: inline-block;
+    width: 5px;
+    height: 20px;
+    background-color: #ff8600;
+    margin-right: 5px;
+}
+
+.loader span:nth-child(1){
+    animation: grow 1s ease-in-out infinite;
+}
+
+.loader span:nth-child(2){
+    animation: grow 1s ease-in-out 0.15s infinite;
+}
+
+.loader span:nth-child(3){
+    animation: grow 1s ease-in-out 0.30s infinite;
+}
+
+.loader span:nth-child(4){
+    animation: grow 1s ease-in-out 0.45s infinite;
+}
+
+@keyframes grow{
+    0%, 100%{
+        -webkit-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+        -o-transform: scaleY(1);
+        transform: scaleY(1);
+    }
+
+    50%{
+        -webkit-transform: scaleY(1.8);
+        -ms-transform: scaleY(1.8);
+        -o-transform: scaleY(1.8);
+        transform: scaleY(1.8);
     }
 }
