--- a/client/src/components/TodosPage/TodosPage.module.scss
+++ b/client/src/components/TodosPage/TodosPage.module.scss
@@ -1,19 +1,61 @@
+
 .todoPage {
     padding: 40px 50px;
+    h3 {
+        font-size: 24px;
+        letter-spacing: 1.8px;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
     .todosList {
         margin-top: 30px;
-        h3 {
-            font-size: 20px;
-            letter-spacing: 1.8px;
-            font-weight: 700;
+        display: flex;
+        justify-content: space-between;
+        h4 {
+            margin-bottom: 10px;
+        }
+        .todoInWork{
+            width: 60%;
+        }
+        .todoCompleted {
+            width: 35%;
+        }
+        .todoItem {
             margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            .btns {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-left: auto;
+                svg {
+                    margin: 0 5px;
+                }
+            }
+            .closeBtn {
+                color: #404447;
+                cursor: pointer;
+                transition: 0s;
+                &:hover {
+                    color: #E10417;
+                }
+            }
+            .editBtn {
+                color: #404447;
+                cursor: pointer;
+                transition: 0s;
+                &:hover {
+                    color: #ff8600;
+                }
+            }
         }
     }
 }
 
 .formGroup {
-    display: block;
-    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .formGroup input {
@@ -27,21 +69,22 @@
 
 .formGroup label {
     position: relative;
-    cursor: pointer;    
+    cursor: pointer;
+    font-weight: 500;
 }
 
 .formGroup label:before {
     content:'';
     -webkit-appearance: none;
     background-color: transparent;
-    border: 2px solid #ff8600;
+    border: 2px solid rgba(255, 130, 0, 0.29);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
     padding: 10px;
     display: inline-block;
     position: relative;
     vertical-align: middle;
     cursor: pointer;
-    margin-right: 5px;
+    margin-right: 10px;
     transition: all 0.5s ease;
 }
 
@@ -57,4 +100,34 @@
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
     transition: all 0.5s ease;
+}
+.formGroup input:checked + label:before {
+    border: 2px solid #ff8600;
+}
+.formGroupChecked {
+    label {
+        color: #878787;
+        text-decoration: line-through;
+        font-style: italic;
+    }
+}
+.editField {
+    width: 100px;
+    border: 1px solid rgba(255, 130, 0, 0.29);
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    background: #ffffff !important;
+    outline: none;
+    height: 24px;
+    width: 100%;
+    color: #cccccc;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 25px 15px;
+    &:focus {
+        color: #000000;
+        border: 1px solid #ff8600
+    }
 }
