--- a/client/src/components/common/AddItemForm/AddItemForm.module.scss
+++ b/client/src/components/common/AddItemForm/AddItemForm.module.scss
@@ -1,19 +1,19 @@
 .input {
-    border: 1px solid rgba(255, 130, 0, 0.29); 
-    border-radius: 3px; 
-    -webkit-border-radius: 3px; 
-    -moz-border-radius: 3px; 
-    -khtml-border-radius: 3px; 
-    background: #ffffff !important; 
-    outline: none; 
-    height: 24px; 
-    width: 100%; 
-    color: #cccccc; 
+    border: 1px solid rgba(255, 130, 0, 0.29);
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    background: #ffffff !important;
+    outline: none;
+    height: 24px;
+    width: 100%;
+    color: #cccccc;
     font-size: 15px;
     font-weight: 500;
     padding: 25px 15px;
-}
-.input:focus {
-    color: #000000;
-    border: 1px solid #ff8600
+    &:focus {
+        color: #000000;
+        border: 1px solid #ff8600
+    }
 }
