--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,3 +39,12 @@ body {
   justify-content: center;
   align-items: center;
 }
+.page-section {
+  padding: 40px 50px;
+  h3 {
+    font-size: 24px;
+    letter-spacing: 1.8px;
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+}
