--- a/client/src/components/VideoPage/VideoPage.module.scss
+++ b/client/src/components/VideoPage/VideoPage.module.scss
@@ -22,6 +22,7 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
     padding: 50px 200px 0;
+    z-index: 999;
     .videoWrap{
         overflow:hidden;
         position:relative;
