--- a/client/src/components/VideoPage/VideoPage.module.scss
+++ b/client/src/components/VideoPage/VideoPage.module.scss
@@ -6,6 +6,7 @@
         width: 25%;
         padding: 0 1%;
         overflow: hidden;
+        cursor: pointer;
         .previewImg {
             width: 100%;
             height: auto;
