english page + refactoring

--- a/client/src/components/common/SearchAndFilter/SearchAndFilter.module.scss
+++ b/client/src/components/common/SearchAndFilter/SearchAndFilter.module.scss
@@ -2,6 +2,7 @@
     position: relative;
     text-align: center;
     margin: 25px 0;
+    padding-bottom: 30px;
     .searchInput {
         border: 1px solid rgba(255, 130, 0, 0.29);
         border-radius: 3px;
@@ -28,6 +29,7 @@
         top: 0;
         color: #83888b;
         cursor: pointer;
+        transition: all 0s linear;
         &.filterBtnOpen {
             color: #ff8600;
         }
