--- a/client/src/components/VideoPage/VideoPage.module.scss
+++ b/client/src/components/VideoPage/VideoPage.module.scss
@@ -2,15 +2,50 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 15px;
+    padding-bottom: 100px;
     .videoItem {
         width: 25%;
         padding: 0 1%;
-        overflow: hidden;
-        cursor: pointer;
+        margin-bottom: 20px;
         .previewImg {
             width: 100%;
             height: auto;
             max-width: 100%;
+            cursor: pointer;
+        }
+        h4 {
+            height: 55px;
+            overflow: hidden;
+            margin: 5px 0;
+            font-size: 16px;
+        }
+        .status {
+            display: inline-block;
+            margin: 5px 0;
+            font-weight: 700;
+        }
+        button {
+            border: 0;
+            background: transparent;
+            color: #83888b;
+            cursor: pointer;
+            transition: 0.3s;
+            &:hover {
+                color: #e16c80;
+            }
+        }
+        .editBtn {
+            color: #83888b;
+            cursor: pointer;
+            transition: 0.3s;
+            &:hover {
+                color: #ff8600;
+            }
+        }
+        .editBlock {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
     }
 }
