--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -67,5 +67,24 @@ body {
     outline: none !important;
     box-shadow: 0 0 0 1px #ff8600 !important;
   }
+}
 
+input, textarea {
+  border: 1px solid rgba(255, 130, 0, 0.29);
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  background: #ffffff !important;
+  outline: none;
+  height: 24px;
+  width: 100%;
+  color: #cccccc;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 25px 15px;
+  &:focus {
+    color: #000000;
+    border: 1px solid #ff8600
+  }
 }
