--- a/client/src/components/ProjectPage/ProjectPage.module.scss
+++ b/client/src/components/ProjectPage/ProjectPage.module.scss
@@ -1,3 +1,27 @@
 .projectPage {
-    padding: 50px 40px;
+    padding: 30px 40px;
+    .projectList {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .projectItem {
+            width: 48%;
+            position: relative;
+            overflow: hidden;
+            margin-bottom: 15px;
+            .btnBlock {
+                position: absolute;
+                top: 0;
+                right: -100%;
+                opacity: 0;
+                transition: 0.3s;
+            }
+            &:hover {
+                .btnBlock {
+                    right: 0;
+                    opacity: 1;
+                }
+            }
+        }
+    }
 }
