patterns page logic + small refactoring

--- a/client/src/components/common/AddItemForm/AddItemForm.module.scss
+++ b/client/src/components/common/AddItemForm/AddItemForm.module.scss
@@ -12,6 +12,8 @@
     font-size: 15px;
     font-weight: 500;
     padding: 25px 15px;
+    display: block;
+    margin-bottom: 20px;
     &:focus {
         color: #000000;
         border: 1px solid #ff8600
