--- a/client/src/components/ProjectPage/ProjectPage.module.scss
+++ b/client/src/components/ProjectPage/ProjectPage.module.scss
@@ -22,6 +22,20 @@
                     opacity: 1;
                 }
             }
+            .techList {
+                display: flex;
+                list-style: none;
+                margin: 10px 0;
+                li {
+                    font-size: 12px;
+                    font-weight: 700;
+                    margin-right: 5px;
+                }
+            }
+            a {
+                display: inline-block;
+                margin-bottom: 10px;
+            }
         }
     }
 }
