--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -32,7 +32,8 @@ body {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 0 4px 4px 0;
     box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     &::-webkit-scrollbar { width: 0; }
     & { -ms-overflow-style: none; }
     & { overflow: -moz-scrollbars-none; }
