--- a/client/src/components/AuthPage/AuthPage.module.scss
+++ b/client/src/components/AuthPage/AuthPage.module.scss
@@ -28,18 +28,13 @@
                     margin-bottom: 5px;
                 }
                 input {
-                    width: 100%;
-                    margin-bottom: 15px;
-                    border: 0;
-                    background: transparent;
-                    padding: 10px;
+                    display: block;
+                    margin-bottom: 10px;
+                    padding: 15px;
                     font-size: 17px;
-                    &:focus {
-                        border-color: #ff8600;
-                    }
                 }
             }
-        }        
+        }
     }
     .authFormBtns {
         display: flex;
