--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,6 +26,16 @@ body {
   display: grid;
   grid-template-columns: 300px 1fr;
   position: relative;
+  @media screen and (max-width: 1000px) {
+    grid-template-rows: 30 0px 1fr;
+    grid-template-columns: 1fr;
+    padding: 50px 40px;
+  }
+  @media screen and (max-width: 760px) {
+    grid-template-rows: 300px 1fr;
+    grid-template-columns: 1fr;
+    padding: 30px 10px;
+  }
   .main__wrapper-in {
     width: 100%;
     height: 100%;
@@ -117,3 +127,52 @@ input, textarea {
   }
 }
 
+.btn-default {
+  background: transparent;
+  cursor: pointer;
+  border: 1px solid #333;
+  padding: 5px 10px;
+  font-size: 20px;
+  outline: none;
+  position: relative;
+  border-radius: 5px;
+  &:not(:last-child) {
+    margin-right: 15px;
+  }
+  &:hover {
+    background: #ff8600;
+    color: #ffffff;
+  }
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+.mt-3 {
+  margin-top: 3rem;
+}
+.mt-4 {
+  margin-top: 4rem;
+}
+.mt-5 {
+  margin-top: 5rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+.mb-2 {
+  margin-bottom: 2rem;
+}
+.mb-3 {
+  margin-bottom: 3rem;
+}
+.mb-4 {
+  margin-bottom: 4rem;
+}
+.mb-5 {
+  margin-bottom: 5rem;
+}
