--- a/client/src/components/VideoPage/VideoPage.module.scss
+++ b/client/src/components/VideoPage/VideoPage.module.scss
@@ -7,6 +7,12 @@
         width: 25%;
         padding: 0 1%;
         margin-bottom: 20px;
+        @media screen and (max-width: 1000px) {
+            width: 50%;
+        }
+        @media screen and (max-width: 760px) {
+            width: 100%;
+        }
         .previewImg {
             width: 100%;
             height: auto;
