--- a/client/src/components/common/SearchAndFilter/SearchAndFilter.module.scss
+++ b/client/src/components/common/SearchAndFilter/SearchAndFilter.module.scss
@@ -41,6 +41,7 @@
     }
     .filtersList {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         list-style: none;
         margin-top: 20px;
@@ -48,7 +49,7 @@
             border: 1px solid #83888b;
             cursor: pointer;
             padding: 6px 12px;
-            margin: 0 5px;
+            margin: 0 5px 10px;
             border-radius: 3px;
             &.activeFilterItem {
                 border: 1px solid #ff8600;
