--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,7 +8,6 @@
 }
 
 body {
-  margin: 0;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -56,6 +55,12 @@ body {
 }
 .page-section {
   padding: 40px 50px;
+  @media screen and (max-width: 1000px){
+    padding: 30px 30px;
+  }
+  @media screen and (max-width: 760px){
+    padding: 20px 10px;
+  }
   h3 {
     font-size: 24px;
     letter-spacing: 1.8px;
