--- a/client/src/components/ChatPage/Chat/Chat.scss
+++ b/client/src/components/ChatPage/Chat/Chat.scss
@@ -5,6 +5,7 @@
     background: transparent;
     width: 500px;
     height: 500px;
+    z-index: 8;
 }
 
 .container {
@@ -12,24 +13,58 @@
     flex-direction: column;
     justify-content: space-between;
     background: #FFFFFF;
-    border-radius: 8px;
+    border-radius: 0 !important;
     height: 100%;
     width: 100%;
+    z-index: 99;
+}
+
+.chatBtn {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 70px;
+    height: 70px;
+    z-index: 55;
+    padding: 15px;
+    background: #383838;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s linear;
+    cursor: pointer;
+    border-radius: 50%;
+    .editBtn {
+        color: #ff8600;
+    }
+    @media screen and (min-width: 1000px) {
+        &:hover {
+            background: #5a5a5a;
+        }
+    }
+
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
     .outerContainer {
+        position: absolute;
+        width: 100%;
         height: 100%;
     }
 
     .container {
         width: 100%;
         height: 100%;
+        position: relative;
     }
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
+    .outerContainer {
+        width: 450px;
+    }
     .container {
-        width: 60%;
+        width: 100%;
+        height: 100%;
     }
 }
