--- a/client/src/components/EnglishPage/EnglishPage.module.scss
+++ b/client/src/components/EnglishPage/EnglishPage.module.scss
@@ -1,8 +1,8 @@
 .dictionaryTable {
-    table-layout: fixed;
     width: 100%;
     border-collapse: collapse;
     margin-top: 30px;
+    table-layout: auto;
     thead {
         th {
             background: #ff8600;
@@ -35,6 +35,19 @@
                 &:hover {
                     color: #e16c80;
                 }
+            }
+
+        }
+    }
+    @media screen and (max-width: 760px) {
+        th {
+            font-size: 13px;
+        }
+        td {
+            font-size: 12px;
+            padding: 10px 5px;
+            .deleteBtn {
+                font-size: 11px;
             }
         }
     }
