--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -6,12 +6,20 @@
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 4px 0 0 4px;
     box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);
+    position: relative;
+    .sidebar_burger {
+        display: none;
+        .burgerBtn {
+            cursor: pointer;
+            transition: all .4s linear;
+        }
+    }
     h1 {
         font-weight: 900;
         text-align: center;
         margin: 10px 0 30px;
     }
-    .exitBtn {        
+    .exitBtn {
         display: inline-block;
         width: 100%;
         color: #404447;
@@ -23,9 +31,15 @@
         border-left: 2px solid transparent;
         margin-top: auto;
         margin-bottom: 40px;
-        &:hover {
-            color: #ff8600;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        @media screen and (max-width: 1000px){
+            &:hover {
+                color: #ff8600;
+            }
         }
+
         img {
             margin-right: 1rem;
             margin-top: 2px;
@@ -45,14 +59,96 @@
             padding-left: 17px;
             border-left: 2px solid transparent;
             margin-bottom: 10px;
-            &:hover {
-                color: #ff8600;
-                border-left: 2px solid #ff8600;
+            @media screen and (max-width: 1000px){
+                &:hover {
+                    color: #ff8600;
+                    border-left: 2px solid #ff8600;
+                }
             }
         }
         .activeLink {
             color: #ff8600;
             border-left: 2px solid #ff8600;
+        }
+    }
+    @media screen and (max-width: 1000px){
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 40px;
+        h1 {
+            display: inline-block;
+            text-align: left;
+            font-size: 25px;
+            padding-left: 5px;
+            margin: 5px 0;
+        }
+        .sidebar_burger {
+            display: block;
+            z-index: 2;
+        }
+        .sidebarNav {
+            display: none;
+            &.sidebarOpen {
+                display: block;
+                position: fixed;
+                z-index: 88;
+                width: 100%;
+                height: 100vh;
+                top: 0;
+                left: 0;
+                background: #ffffff;
+                padding: 15px 0;
+                nav {
+                    margin-top: 150px;
+                    .links {
+                        display: inline-block;
+                        width: 100%;
+                        color: #404447;
+                        text-decoration: none;
+                        font-weight: 500;
+                        font-size: 20px;
+                        letter-spacing: 1px;
+                        padding-left: 17px;
+                        border-left: 2px solid transparent;
+                        margin-bottom: 15px;
+                        text-align: center;
+                    }
+                    .activeLink {
+                        color: #ff8600;
+                        border-left: 2px solid #ff8600;
+                    }
+                }
+                .burgerBtn {
+                    position: absolute;
+                    top: 30px;
+                    right: 30px;
+                }
+            }
+        }
+        .exitBtn {
+            font-size: 18px;
+            margin-top: 100px;
+            position: relative;
+            padding-left: 0;
+            text-align: center;
+        }
+
+    }
+    @media screen and (max-width: 560px){
+        padding: 10px;
+        h1 {
+            display: inline-block;
+            text-align: left;
+            font-size: 18px;
+            padding-left: 5px;
+        }
+        .sidebar_burger {
+            top: 0;
+            right: 0;
+            svg {
+                height: 2rem;
+                width: 2rem;
+            }
         }
     }
 }
