--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,13 +26,14 @@ body {
   grid-template-columns: 300px 1fr;
   position: relative;
   @media screen and (max-width: 1000px) {
-    grid-template-rows: 30 0px 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-columns: 1fr;
     padding: 50px 40px;
   }
   @media screen and (max-width: 760px) {
-    grid-template-rows: 300px 1fr;
-    grid-template-columns: 1fr;
+    padding: 30px 10px;
+  }
+  @media screen and (max-width: 540px) {
     padding: 30px 10px;
   }
   .main__wrapper-in {
@@ -114,21 +115,21 @@ input, textarea {
   svg {
     margin: 0 5px;
   }
-  .closeBtn {
-    color: #83888b;
-    cursor: pointer;
-    transition: 0s;
-    &:hover {
-      color: #e16c80;
-    }
+}
+.closeBtn {
+  color: #83888b;
+  cursor: pointer;
+  transition: 0s;
+  &:hover {
+    color: #e16c80;
   }
-  .editBtn {
-    color: #83888b;
-    cursor: pointer;
-    transition: 0s;
-    &:hover {
-      color: #ff8600;
-    }
+}
+.editBtn {
+  color: #83888b;
+  cursor: pointer;
+  transition: 0s;
+  &:hover {
+    color: #ff8600;
   }
 }
 
