--- a/client/src/components/ChatPage/Chat/Chat.scss
+++ b/client/src/components/ChatPage/Chat/Chat.scss
@@ -4,10 +4,12 @@
     right: 0;
     background: transparent;
     width: 500px;
-    height: 500px;
     z-index: 8;
 }
 
+.outerContainerOpen {
+    height: 500px;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -46,7 +48,7 @@
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-    .outerContainer {
+    .outerContainer.outerContainerOpen {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -60,7 +62,7 @@
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
-    .outerContainer {
+    .outerContainer.outerContainerOpen {
         width: 450px;
     }
     .container {
