--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -1,23 +1,27 @@
 .wrapper {
+    position: fixed;
+    left: 0;
+    top: 0;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    width: 400px;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 4px 0 0 4px;
     box-shadow: 0 0 120px rgba(31, 32, 41, 0.1);
-    position: relative;
-    .sidebar_burger {
-        display: none;
+    z-index: 88;
+    transform: translateX(-100%);
+    &.openWrapper {
+        transform: translateX(0);
+    }
+    .closeBtnWrap {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 25px;
         .burgerBtn {
             cursor: pointer;
             transition: all .4s linear;
         }
-    }
-    h1 {
-        font-weight: 900;
-        text-align: center;
-        margin: 10px 0 30px;
     }
     .exitBtn {
         display: inline-block;
@@ -30,7 +34,7 @@
         padding-left: 17px;
         border-left: 2px solid transparent;
         margin-top: auto;
-        margin-bottom: 40px;
+        margin-bottom: 45px;
         position: absolute;
         bottom: 0;
         left: 0;
@@ -54,11 +58,11 @@
             color: #404447;
             text-decoration: none;
             font-weight: 500;
-            font-size: 15px;
+            font-size: 17px;
             letter-spacing: 1px;
             padding-left: 17px;
             border-left: 2px solid transparent;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             @media screen and (max-width: 1000px){
                 &:hover {
                     color: #ff8600;
@@ -76,80 +80,8 @@
             display: none;
         }
     }
-    @media screen and (max-width: 1000px){
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 15px 40px;
-        h1 {
-            display: inline-block;
-            text-align: left;
-            font-size: 25px;
-            padding-left: 5px;
-            margin: 5px 0;
-        }
-        .sidebar_burger {
-            display: block;
-            z-index: 2;
-        }
-        .sidebarNav {
-            display: none;
-            &.sidebarOpen {
-                display: block;
-                position: fixed;
-                z-index: 88;
-                width: 100%;
-                height: 100vh;
-                top: 0;
-                left: 0;
-                background: #ffffff;
-                padding: 15px 0;
-                .burgerBtn {
-                    display: block;
-                }
-                nav {
-                    margin-top: 150px;
-                    .links {
-                        display: inline-block;
-                        width: 100%;
-                        color: #404447;
-                        text-decoration: none;
-                        font-weight: 500;
-                        font-size: 20px;
-                        letter-spacing: 1px;
-                        padding-left: 17px;
-                        border-left: 2px solid transparent;
-                        margin-bottom: 15px;
-                        text-align: center;
-                    }
-                    .activeLink {
-                        color: #ff8600;
-                        border-left: 2px solid #ff8600;
-                    }
-                }
-                .burgerBtn {
-                    position: absolute;
-                    top: 30px;
-                    right: 30px;
-                }
-            }
-        }
-        .exitBtn {
-            font-size: 18px;
-            margin-top: 100px;
-            position: relative;
-            padding-left: 0;
-            text-align: center;
-        }
-
-    }
     @media screen and (max-width: 560px){
-        padding: 10px;
-        h1 {
-            display: inline-block;
-            text-align: left;
-            font-size: 18px;
-            padding-left: 5px;
-        }
+        width: 100%;
         .sidebar_burger {
             top: 0;
             right: 0;
