--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,12 +20,10 @@ body {
   -webkit-background-size: cover;
   background-size: cover;
   overflow: hidden;
-  padding: 50px 80px;
+  padding: 0;
   box-sizing: border-box;
-  display: grid;
-  grid-template-columns: 300px 1fr;
   position: relative;
-  @media screen and (max-width: 1000px) {
+  /*@media screen and (max-width: 1000px) {
     grid-template-rows: auto 1fr;
     grid-template-columns: 1fr;
     padding: 50px 40px;
@@ -35,7 +33,7 @@ body {
   }
   @media screen and (max-width: 540px) {
     padding: 30px 10px;
-  }
+  }*/
   .main__wrapper-in {
     width: 100%;
     height: 100%;
